Fix after testing for PUT .../fulfillment